--- a/GattiaSuWebsiteNChat/GattiaSuWebsiteNChat/packages.config
+++ b/GattiaSuWebsiteNChat/GattiaSuWebsiteNChat/packages.config
@@ -25,6 +25,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="RestSharp" version="106.3.1" targetFramework="net461" />
   <package id="Senparc.CO2NET" version="0.2.6" targetFramework="net461" />
   <package id="Senparc.Weixin" version="5.1.7" targetFramework="net461" />
   <package id="Senparc.Weixin.MP" version="15.2.1" targetFramework="net461" />
